--- a/basic/index.html
+++ b/basic/index.html
@@ -14,16 +14,16 @@
 		<link rel="author" href="https://github.com/flesler" />
 		<link rel="license" href="https://raw.githubusercontent.com/flesler/taptap/gh-pages/LICENSE" />
 
-		<link rel="icon" href="/favicon.ico" type="image/ico" sizes="16x16">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon.ico">
+		<link rel="icon" href="../favicon.ico" type="image/ico" sizes="16x16">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="apple-touch-icon" href="../favicon.ico">
     <meta name="apple-mobile-web-app-title" content="TapTap">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-		<link rel="stylesheet" href="/base/style.css" />
+		<link rel="stylesheet" href="../base/style.css" />
 	</head>
 	<body>
-		<script type="text/javascript" src="/base/taptap.js"></script>
+		<script type="text/javascript" src="../base/taptap.js"></script>
 		<script type="text/javascript">
 		var tap;// REMOVE
 		tap.setup([{}, {img:'ham'}, {}], function(btn) {
