--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<link rel="author" href="https://github.com/flesler" />
 		<link rel="license" href="https://raw.githubusercontent.com/flesler/taptap/gh-pages/LICENSE" />
 
-		<link rel="icon" href="favicon.ico" type="image/ico" sizes="16x16">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="favicon.ico">
+		<link rel="icon" href="/favicon.ico" type="image/ico" sizes="16x16">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="TapTap">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="basic/">Basic</a></li>
+			<li><a href="/basic/">Basic</a></li>
 		</ul>
 	</body>
 </html>
