--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 		<link rel="help" href="https://github.com/flesler/taptap/" />
 		<link rel="author" href="https://github.com/flesler" />
-		<link rel="license" href="https://raw.githubusercontent.com/flesler/taptap/gh-pages/LICENSE" />
+		<link rel="license" href="/LICENSE.md" />
+		<link rel="manifest" href="/manifest.json">
 
 		<link rel="icon" href="/favicon.ico" type="image/ico" sizes="16x16">
     <link rel="shortcut icon" href="/favicon.ico">
