--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
 	</head>
 	<body>
 		<div class="btn">
-			<div class="wrap">
-				<a href="/basic/">Basic</a>
-			</div>
+			<a href="/basic/">
+				<div class="wrap">
+					<span>Basic</span>
+				</div>
+			</a>
 		</div>
-		<div class="btn">
-			<div class="wrap">
-				<a href="/pad/">Pad</a>
-			</div>
+		<div class="btn" style="left:50%">
+			<a href="/pad/">
+				<div class="wrap">
+					<span>Pad</span>
+				</div>
+			</a>
 		</div>
 	</body>
 </html>
