--- a/pad/index.html
+++ b/pad/index.html
@@ -29,7 +29,7 @@
 		/* global tap */
 		var buttons = [
 			{img:'cat', snd:'cat'},
-			{img:'bird4', snd:'bird'},
+			{img:'bird', snd:'bird'},
 		];
 
 		tap.aliases.cat = ['cat', 'cat2', 'cat3'];
